--- a/image.html
+++ b/image.html
@@ -165,7 +165,7 @@
                 <h3>Customer Services</h3>
                 <p class="para"><a href="#">Help Center</a><br>
                     Find answers to your questions and get in touch with our support team.</p>
-                <p class="para"><a href="#">Shipping & Returns</a><br>
+                <p class="para"><a href="#">Shiping & Returns</a><br>
                     Information about our shipping plicies and how to return items.</p>
                 <p class="para"><a href="#">Privacy Policy</a><br>
                         Read about how we protect your dta and your rights.</p>
